rtg_tests/negative/excluded_goroutine/go.mod
module example.com/rtgtests/negative/goroutine

go 1.25
